app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: test-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: test-app

  template:
    metadata:
      labels:
        app: test-app

    spec:
      containers:
        - name: test-app

          image: cr.yandex/crpnq3ci2q59h2s03lt7/test-app:latest

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10

          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"

            limits:
              memory: "128Mi"
              cpu: "200m"
